@@ -140,6 +140,16 @@ typedef enum WICComponentEnumerateOptions {
     WICComponentEnumerateDisabled = 0x80000000
 } WICComponentEnumerateOptions;
 
+typedef enum WICPixelFormatNumericRepresentation {
+    WICPixelFormatNumericRepresentationUnspecified = 0x00000000,
+    WICPixelFormatNumericRepresentationIndexed = 0x00000001,
+    WICPixelFormatNumericRepresentationUnsignedInteger = 0x00000002,
+    WICPixelFormatNumericRepresentationSignedInteger = 0x00000003,
+    WICPixelFormatNumericRepresentationFixed = 0x00000004,
+    WICPixelFormatNumericRepresentationFloat = 0x00000005,
+    WICPIXELFORMATNUMERICREPRESENTATION_FORCE_DWORD = CODEC_FORCE_DWORD
+} WICPixelFormatNumericRepresentation;
+
 typedef GUID WICPixelFormatGUID;
 typedef REFGUID REFWICPixelFormatGUID;
 
@@ -196,6 +206,7 @@ cpp_quote("#define WINCODEC_ERR_CODECNOTHUMBNAIL 0x88982f44")
 cpp_quote("#define WINCODEC_ERR_PALETTEUNAVAILABLE 0x88982f45")
 cpp_quote("#define WINCODEC_ERR_COMPONENTNOTFOUND 0x88982f50")
 cpp_quote("#define WINCODEC_ERR_FRAMEMISSING 0x88982f62")
+cpp_quote("#define WINCODEC_ERR_BADMETADATAHEADER 0x88982f63")
 cpp_quote("#define WINCODEC_ERR_UNSUPPORTEDPIXELFORMAT 0x88982f80")
 cpp_quote("#define WINCODEC_ERR_UNSUPPORTEDOPERATION 0x88982f81")
 cpp_quote("#define WINCODEC_ERR_INSUFFICIENTBUFFER 0x88982f8c")
@@ -442,6 +453,44 @@ interface IWICBitmapFrameDecode : IWICBitmapSource
 
     HRESULT GetThumbnail(
         [out] IWICBitmapSource **ppIThumbnail);
+}
+
+[
+    object,
+    uuid(e8eda601-3d48-431a-ab44-69059be88bbe)
+]
+interface IWICPixelFormatInfo : IWICComponentInfo
+{
+    HRESULT GetFormatGUID(
+        [out] GUID* pFormat);
+
+    HRESULT GetColorContext(
+        [out] IWICColorContext **ppIColorContext);
+
+    HRESULT GetBitsPerPixel(
+        [out] UINT *puiBitsPerPixel);
+
+    HRESULT GetChannelCount(
+        [out] UINT *puiChannelCount);
+
+    HRESULT GetChannelMask(
+        [in] UINT uiChannelIndex,
+        [in] UINT cbMaskBuffer,
+        [in, out, unique, size_is(cbMaskBuffer)] BYTE *pbMaskBuffer,
+        [out] UINT *pcbActual);
+}
+
+[
+    object,
+    uuid(a9db33a2-af5f-43c7-b679-74f5984b5aa4)
+]
+interface IWICPixelFormatInfo2 : IWICPixelFormatInfo
+{
+    HRESULT SupportsTransparency(
+        [out] BOOL *pfSupportsTransparency);
+
+    HRESULT GetNumericRepresentation(
+        [out] WICPixelFormatNumericRepresentation *pNumericRepresentation);
 }
 
 [
@@ -956,3 +1005,4 @@ cpp_quote("DEFINE_GUID(CATID_WICBitmapDecoders, 0x7ed96837,0x96f0,0x4812,0xb2,0x
 cpp_quote("DEFINE_GUID(CATID_WICBitmapEncoders, 0xac757296,0x3522,0x4e11,0x98,0x62,0xc1,0x7b,0xe5,0xa1,0x76,0x7e);")
 cpp_quote("DEFINE_GUID(CATID_WICFormatConverters, 0x7835eae8,0xbf14,0x49d1,0x93,0xce,0x53,0x3a,0x40,0x7b,0x22,0x48);")
 cpp_quote("DEFINE_GUID(CATID_WICMetadataReader, 0x05af94d8,0x7174,0x4cd2,0xbe,0x4a,0x41,0x24,0xb8,0x0e,0xe4,0xb8);")
+cpp_quote("DEFINE_GUID(CATID_WICPixelFormats, 0x2b46e70f,0xcda7,0x473e,0x89,0xf6,0xdc,0x96,0x30,0xa2,0x39,0x0b);")
