@@ -1,3 +1,8 @@
+2012-06-15  Kai Tietz  <ktietz@redhat.com>
+
+	* assert.h, process.h, stdlib.h (_exit,_cexit, _c_exit):
+	Remove _CRTIMP specifier from prototype.
+
 2012-06-15 niXman <i.nixman@gmail.com>
 
 	* wchar.h (wmemcmp): Add missing __cdecl to prototype.
